[tool.poetry]
name = "kitsu-library-availability"
version = "0.0.1"
description = "Check streaming availability for anime in Kitsu library"
authors = ["Kyle King <KyleKing@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"

[tool.poetry.dev-dependencies]
icecream = "^1.3"
pytest = "^4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
