[tool.poetry]
name = "kitsu_library_availability"
version = "0.0.1"
description = "Check streaming availability for shows or movies in user's Kitsu library"
authors = ["Kyle King <KyleKing@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7, !=3.8"
dash_charts = {git = "https://github.com/KyleKing/dash_charts.git"}
dataset = "*"
icecream = "*"
pyhumps = "*"
requests = "*"

[tool.poetry.dev-dependencies]
# csv-to-sqlite = "*"
# flatdict = "*"
dash_dev = {git = "https://github.com/KyleKing/dash_dev.git"}

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
