[tool.poetry]
name = "kitsu_lib"
version = "0.0.1"
description = "Explore users' Kitsu library and see available streaming sources"
authors = ["Kyle King <https://github.com/KyleKing>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7, !=3.8"
dash = "^1.11"
dash_charts = {git = "https://github.com/KyleKing/dash_charts.git"}
dataset = "*"
furl = "*"
icecream = "*"
pyhumps = "*"
requests = "*"

[tool.poetry.dev-dependencies]
# csv-to-sqlite = "*"
# flatdict = "*"
dash = {extras = ["testing"], version = "*, ^1.11"}
dash_dev = {git = "https://github.com/KyleKing/dash_dev.git"}

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
